# drifting-satellite

./: .gitignore  .gitmodules  pyproject.toml  run.sh
public/: app.js  index.html  style.css
screenpipe-main/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README-ja.md  README-zh_CN.md  README.md  TESTING.md  VISION.md
screenpipe-main/.claude/skills/release/: SKILL.md
screenpipe-main/.github/scripts/e2e/: run-all.ts  test-capture-fidelity.ts
screenpipe-main/.github/workflows/: ci.yml  debug-macos-m1-ssh.yml  debug-macos-m1.yml  e2e-macos.yml  e2e-test.yml  release-app.yml  release-cli.yml  release-enterprise-windows.yml  release-mcp.yml  windows-integration-test.yml
screenpipe-main/apps/screenpipe-app-tauri/: package.json
screenpipe-main/apps/screenpipe-app-tauri/app/: global-error.jsx  globals.css  layout.tsx  page.tsx  providers.tsx
screenpipe-main/apps/screenpipe-app-tauri/components/: cli-command-dialog.tsx  conversation-bubble.tsx  deeplink-handler.tsx  login-dialog.tsx  screenpipe-status.tsx  text-overlay.tsx  (+6 more)
screenpipe-main/crates/screenpipe-accessibility/: Cargo.toml
screenpipe-main/crates/screenpipe-accessibility/examples/: linux_debug.rs  linux_deep.rs  linux_e2e.rs  linux_test.rs
screenpipe-main/crates/screenpipe-accessibility/src/: config.rs  events.rs  lib.rs
screenpipe-main/crates/screenpipe-accessibility/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  windows_uia.rs  windows_uia_tests.rs
screenpipe-main/crates/screenpipe-accessibility/src/tree/: cache.rs  linux.rs  macos.rs  mod.rs  windows.rs
screenpipe-main/crates/screenpipe-accessibility/tests/: e2e_tree_walker.rs
screenpipe-main/crates/screenpipe-apple-intelligence/: Cargo.toml
screenpipe-main/crates/screenpipe-audio/: Cargo.toml
screenpipe-main/crates/screenpipe-core/: Cargo.toml
screenpipe-main/crates/screenpipe-integrations/: Cargo.toml
screenpipe-main/crates/screenpipe-server/: Cargo.toml
screenpipe-main/crates/screenpipe-vision/: Cargo.toml
screenpipe-main/docker/linux-test/: Dockerfile
screenpipe-main/docs/: EVENT_DRIVEN_CAPTURE_SPEC.md  single-click-summaries-spec.md
screenpipe-main/scripts/: test-openai-compatible-stt.sh
screenpipe-main/scripts/generate-audio-dataset/: .gitignore  index.ts  mix.ts  package.json  scenarios.ts
src/: clap_detector.py  context_processor.py  main.py  screenpipe_client.py
(+301 files in other folders)
