[package]
name = "screenpipe-accessibility"
version = "0.1.0"
edition = "2021"
description = "Accessibility and UI event capture for screenpipe - keyboard, mouse, clipboard"
license = "MIT"

[features]
default = []
db = ["screenpipe-db"]

[dependencies]
screenpipe-db = { path = "../screenpipe-db", optional = true }
screenpipe-core = { path = "../screenpipe-core" }
# Core
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Regex for privacy patterns
regex = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.13", features = ["ax", "cg", "blocks", "ns", "app"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Native Windows APIs - no rdev dependency
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# AT-SPI2 accessibility via D-Bus (pure Rust, no system deps for compilation)
zbus = { version = "5", features = ["blocking"] }
# Input device events from /dev/input/event*
evdev = "0.13"
# fcntl for non-blocking I/O on evdev fds
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = "0.2"
